@@ -140,7 +140,7 @@ public class WorkerEP extends Timed {
         if (rank == this.reductorRank) {
             try {
                 allReduceOp = (ReduceAll) PAActiveObject.newActive(WorkerEP.ReduceSumOp.class.getName(),
-                        new Object[] { typedGroup, new Integer(groupSize) });
+                        new Object[] { typedGroup, Integer.valueOf(groupSize) });
             } catch (ActiveObjectCreationException e) {
                 e.printStackTrace();
                 return;
