@@ -429,7 +429,7 @@ public abstract class AbstractListProcessDecorator implements ExternalProcessDec
                     String end = listexclude[i].substring(listexclude[i].indexOf("-") + 1, listexclude[i]
                             .length());
                     for (int j = Integer.parseInt(init); j <= Integer.parseInt(end); j++) {
-                        excludeArray.add(new Integer(j).toString());
+                        excludeArray.add(Integer.valueOf(j).toString());
                     }
                 }
             }
