@@ -101,7 +101,7 @@ public class NameAndHostDialog extends JDialog implements ActionListener, Proper
             @Override
             public void windowClosing(WindowEvent we) {
                 // handle closing behavior in propertyChange ()
-                NameAndHostDialog.this.optionPane.setValue(new Integer(JOptionPane.CLOSED_OPTION));
+                NameAndHostDialog.this.optionPane.setValue(Integer.valueOf(JOptionPane.CLOSED_OPTION));
             }
         });
 
