@@ -215,7 +215,7 @@ public class Main implements ActivePrimeContainerCreator, InitActive {
         }
         ProActiveConfiguration.load();
         Main main = (Main) PAActiveObject.newActive(Main.class.getName(), new Object[] { xmlDescriptor,
-                new Boolean(gui) });
+                Boolean.valueOf(gui) });
     }
 
     /** class for control window. */
