@@ -64,8 +64,8 @@ public class Displayer implements Serializable {
                         .getConstructor(
                                 new Class[] { String.class, Integer.class, Boolean.class, Start.class })
                         .newInstance(
-                                new Object[] { "ProActive N-Body", new Integer(this.nbBodies),
-                                        new Boolean(this.displayft), deployer });
+                                new Object[] { "ProActive N-Body", Integer.valueOf(this.nbBodies),
+                                        Boolean.valueOf(this.displayft), deployer });
             } catch (Throwable e) {
                 e.printStackTrace();
             }
